# projekt_zespolowy

./: .env.example  .gitignore  README.md  docker-compose.yaml
.github/workflows/: deploy-hosted.yml  destroy_all.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/db_initializer/: Dockerfile  main.py
backend/db_initializer/data/: products.json  users.json
backend/src/: app.py  config.py
backend/src/notifications/: generator.py  models.py  router.py  use_cases.py
backend/src/orders/: dependencies.py  exceptions.py  mappers.py  models.py  router.py  use_cases.py  utils.py
backend/src/payments/: dependencies.py  enums.py  exceptions.py  router.py  use_cases.py  utils.py
backend/src/products/: dependencies.py  enums.py  exceptions.py  models.py  router.py  use_cases.py  utils.py
backend/src/sql/: db.py  models.py
backend/src/users/: dependecies.py  exceptions.py  helpers.py  models.py  router.py  use_cases.py  utils.py
backend/src/vector_store/: db.py  repo.py  sync.py  utils.py
frontend/: App.tsx  Dockerfile  app.json  babel.config.js  nginx.conf  package-lock.json  package.json  tamagui.config.ts
frontend/app/: _layout.tsx  cart.tsx  index.tsx  login.tsx  profile.tsx  register.tsx
frontend/app/admin/: products.tsx
frontend/app/orders/: [id].tsx  index.tsx
frontend/app/products/: [id].tsx
frontend/src/auth/: api.ts  useCases.ts
frontend/src/components/: Header.tsx  styled.ts  (+1 more)
infra/: app.py  cdk.json
infra/stacks/: cdn_stack.py  compute_stack.py  container_stack.py  database_stack.py  network_stack.py
(+17 files in other folders)
